@@ -4,6 +4,7 @@ import com.yamada.notkayla.Kayla;
 import com.yamada.notkayla.commands.Command;
 import net.dv8tion.jda.core.JDA;
 import net.dv8tion.jda.core.events.message.guild.GuildMessageReceivedEvent;
+import org.apache.http.client.RedirectHandler;
 
 import java.io.IOException;
 
@@ -14,8 +15,14 @@ public class PullCommand {
         if(bot.getGuildById("481210197453438996").getMemberById(event.getAuthor().getId()) == null) return;
         try {
             event.getChannel().sendTyping().submit();
-            Runtime.getRuntime().exec("git pull").waitFor();
-            int compile = Runtime.getRuntime().exec("gradle compileJava").waitFor();
+            ProcessBuilder git = new ProcessBuilder("git","pull");
+            git.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+            git.redirectError(ProcessBuilder.Redirect.INHERIT);
+            git.start().waitFor();
+            ProcessBuilder comp = new ProcessBuilder("gradle","compileJava");
+            comp.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+            comp.redirectError(ProcessBuilder.Redirect.INHERIT);
+            int compile = comp.start().waitFor();
             if (compile !=0) throw new IOException("couldn't compile code.");
             event.getChannel().sendMessage("\uD83D\uDC4C").submit();
         } catch (IOException e) {
